TODO
* fallback inflate implementation
  - add addler32 support
* add snapshot support
  - backing filename
  - in-image snapshots
* pyqcow
  - add function to set the keys
* add write support ?

File format:
* reference count support

Tools:
* qcowmount - dokan version
  - have it run in background (using CreateProcess)?
  - what about unmount?
  - fix volume size hints
  - create compatible dokan lib

Tests:
* add concurrent open close test
* add concurrent seek test ?
* add password for encrypted QCOW images

20160123
* worked on fallback inflate implementation

20160119
* worked on fallback inflate implementation

20160118
* worked on fallback inflate implementation

20160117
* worked on fallback inflate implementation

20160111
* Changes to Python bindings

20160109
* fixes for rpmbuild

20160108
* 2016 update

20151223
* Changes to Python bindings

20151219
* updated dependencies

20150905
* updated dependencies

20150723
* worked on tests

20150105
* 2015 update

20141229
* updated dpkg files
* updated dependencies
* updated .gitignore

20141226
* changes for updated dependencies

20141221
* worked on Python 3 support
* worked on tests

20141205
* worked on test scripts

20141201
* worked on multi-threading support
* code clean up
* worked on version 3 support

20141129
* code clean up

20141112
* code clean up

20141104
* worked on multi-threading support
* removed deprecated functions:
  - libqcow_file_read_random
  - pyqcow file.read_random

20141029
* bug fix in Python-bindings

20141027
* changes for deployment

20141021
* changes for deployment

20141001
* worked on stand-alone libcstring support

20140920
* changes for project site move

20140801
* bug fix in Python-bindings

20140729
* updated dependencies

20140625
* code clean up

20140330
* code clean up

20140328
* worked on Python bindings

20140317
* worked on Python bindings
* worked on setup.py

20140315
* updated libfdata

20140131
* worked on Python bindings

20140119
* 2014 update