@@ -32,6 +32,7 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "qcow_test_open_close", "qco
 	ProjectSection(ProjectDependencies) = postProject
 		{0370C4E5-693B-4A4C-B378-326DA28C65D9} = {0370C4E5-693B-4A4C-B378-326DA28C65D9}
 		{9BB5C79B-C1EF-438C-ABA0-226EECBD8526} = {9BB5C79B-C1EF-438C-ABA0-226EECBD8526}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
