@@ -1,6 +1,4 @@
 TODO
-* fallback inflate implementation
-  - add addler32 support
 * add snapshot support
   - backing filename
   - in-image snapshots
@@ -22,6 +20,10 @@ Tests:
 * add concurrent open close test
 * add concurrent seek test ?
 * add password for encrypted QCOW images
+
+20160124
+* worked on fallback inflate implementation
+* worked on tests
 
 20160123
 * worked on fallback inflate implementation
